--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,28 @@
-# Example environment variables
+# Server Configuration
 PORT=8080
+
+# Request Limits
+MAX_REQUEST_SIZE=10485760           # 10MB in bytes (10 * 1024 * 1024)
+REQUEST_TIMEOUT=30s                 # Use Go duration format: 30s, 1m, 1m30s
+MAX_REDIRECTS=10
+
+# CORS Configuration
+ALLOWED_ORIGINS=*                   # Use * for all origins, or comma-separated: https://example.com,https://app.example.com
+
+# Security - Host Filtering (comma-separated)
+ALLOWED_HOSTS=                      # If set, only these hosts allowed (e.g., api.github.com,api.example.com)
+BLOCKED_HOSTS=                      # Block specific hosts (e.g., localhost,127.0.0.1,internal.company.com)
+
+# Rate Limiting
+RATE_LIMIT_PER_MINUTE=0             # 0 = disabled, set to number (e.g., 60 for 60 req/min per IP)
+
+# Logging
+VERBOSE_LOGGING=false               # Set to true for detailed request logs
+
+# Examples for production:
+# RATE_LIMIT_PER_MINUTE=100
+# ALLOWED_HOSTS=api.github.com,api.stripe.com
+# BLOCKED_HOSTS=localhost,127.0.0.1,192.168.0.0
+# MAX_REQUEST_SIZE=5242880           # 5MB
+# REQUEST_TIMEOUT=15s
+# VERBOSE_LOGGING=true
